--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,30 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+body {
+  --sidebar: 30vw;
+  --height: 100vh;
+  
+  display: flex;
+  height: var(--height)
+}
+
+#sidebar {
+  width: var(--sidebar);
+}
+
+#container {
+  width: calc(100vw - var(--sidebar));
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.disclaimer {
+  font-size: 1.5rem;
+  font-weight: 700;
+  max-width: 750px;
 }
