completed base styling

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 body {
   --sidebar: 30vw;
   --height: 100vh;
+  --padding: 50px;
   
   display: flex;
   height: var(--height)
@@ -15,17 +16,92 @@ body {
 
 #sidebar {
   width: var(--sidebar);
+  background-image: url('./halie-west-25xggax4bSA-unsplash\ \(1\).jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 #container {
   width: calc(100vw - var(--sidebar));
+  background: #f9fafb;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  justify-content: center;
 }
 
 .disclaimer {
   font-size: 1.5rem;
   font-weight: 700;
   max-width: 750px;
+  margin-bottom: 60px;
+  margin-left: var(--padding);
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px var(--padding) 40px var(--padding);
+  background: #fff;
+}
+
+.form-container h3 {
+  font-size: 1.5rem;
+}
+
+form {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.row {
+  display: flex;
+  gap: 50px;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: .75rem;
+  letter-spacing: 2px;
+}
+
+input {
+  width: 250px;
+  padding: 5px 8px;
+  border-radius: 3px;
+  outline: none;
+  border: 1px solid #E5E7EB;
+  font-size: 1rem;
+}
+
+.button-container {
+  position: absolute;
+  bottom: -175px;
+}
+
+button {
+  background: #596D48;
+  border: none;
+  outline: none;
+  color: #fff;
+  font-size: 1.1rem;
+  font-weight: 700;
+  padding: 15px var(--padding);
+  border-radius: 5px;
+  margin-bottom: 35px;
+}
+
+.login-link {
+  text-decoration: none;
+  color: #596D48;
+  font-weight: 700;
 }
